# banking-ui/src/app/openAPI/swagger.json
@@ -540,6 +540,40 @@
         }
       }
     },
+    "/statistics/sum-transaction/{user-id}": {
+      "get": {
+        "tags": [
+          "statistics-controller"
+        ],
+        "operationId": "findAllSumTransactionByDate",
+        "parameters": [
+          {
+            "name": "user-id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "format": "int32"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/TransactionSumDetails"
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/statistics/sum-by-date/{user-id}": {
       "get": {
         "tags": [
@@ -585,6 +619,38 @@
                   "items": {
                     "$ref": "#/components/schemas/TransactionSumDetails"
                   }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/statistics/previous-login/{user-id}": {
+      "get": {
+        "tags": [
+          "statistics-controller"
+        ],
+        "operationId": "previousLogin",
+        "parameters": [
+          {
+            "name": "user-id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "format": "int32"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "string",
+                  "format": "date-time"
                 }
               }
             }
@@ -915,6 +981,14 @@
           },
           "active": {
             "type": "boolean"
+          },
+          "lastLogin": {
+            "type": "string",
+            "format": "date-time"
+          },
+          "previousLogin": {
+            "type": "string",
+            "format": "date-time"
           }
         },
         "required": [
