# banking-ui/src/app/services$/models.ts
@@ -1,11 +1,0 @@
-/* eslint-disable */
-/* Code generated by ng-openapi-gen DO NOT EDIT. */
-
-export type { AccountDto } from './models/account-dto';
-export type { AddressDto } from './models/address-dto';
-export type { AuthenticationRequest } from './models/authentication-request';
-export type { AuthenticationResponse } from './models/authentication-response';
-export type { ContactDto } from './models/contact-dto';
-export type { TransactionDto } from './models/transaction-dto';
-export type { TransactionSumDetails } from './models/transaction-sum-details';
-export type { UserDto } from './models/user-dto';
