# banking/src/main/java/com/yazzer/banking/models/User.java
@@ -9,6 +9,7 @@ import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
+import java.time.LocalDateTime;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
@@ -31,6 +32,10 @@ public class User extends AbstractEntity implements UserDetails {
     private String password;
 
     private boolean active;
+
+    private LocalDateTime lastLogin;
+
+    private LocalDateTime previousLogin;
 
     @OneToOne
     private Address address;
